# papkin

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md
java/: .project  settings.gradle.kts
java/papkin/: build.gradle.kts
java/papkin/src/main/java/org/papkin/: LoadPlugins.java  Options.java  PapkinServer.java  PluginLoader.java  SimplePaperPluginLoader.java
java/pigot/: .project  build.gradle.kts
java/pigot/src/main/java/org/pigot/: PigotServer.java  PumpkinServerBuildInfo.java  ServerBuildInfoImpl.java  Versioning.java
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
rust/src/java/: jar.rs  java_to_rust.rs  jvm.rs  mod.rs  resources.rs
rust/src/plugin/: manager.rs
