[package]
name = "pigot"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin" }
pumpkin-util = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-util" }
pumpkin-api-macros = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-api-macros" }

async-trait = "0.1"
tokio = "1.42"
log = "0.4"
glob = "0.3.2"
j4rs = { version = "0.23.1" }
j4rs_derive = "0.1"
rust-embed = "8.9.0"
walkdir = "2"

[build-dependencies]
j4rs = { version = "0.23.1", artifact = "cdylib", lib = true }
env_logger = "0.11.8"
log = "0.4"

[profile.release]
lto = true
